# multilayer_perceptron

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: linear_layer.cpp.58BCB90C5B8EE81C.idx  linear_layer.h.D87B864D712B457E.idx  loss_func.cpp.0D1D2B59EF5B0900.idx  loss_func.h.83FADDC65367C6F6.idx  main.cpp.31AAF5B2A99DA93D.idx  mlp.cpp.C1D3BEF94B4C3921.idx  mlp.h.FF1E58D0A8E1D31F.idx  non_linear_layer.cpp.FF517F7AE4776FEC.idx  non_linear_layer.h.902FE3BDF33DF19C.idx  some_test.cpp.57DA84A022ECBFB4.idx
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/digits_recognizer/: CMakeLists.txt  main.cpp
examples/digits_recognizer/models/: V1
include/mlp/: mlp.cpp  mlp.h
src/: linear_layer.cpp  linear_layer.h  loss_func.cpp  loss_func.h  mlp.cpp  mlp.h  non_linear_layer.cpp  non_linear_layer.h
tests/: CMakeLists.txt  some_test.cpp
